cmake_minimum_required(VERSION 3.16)
project(rstream-basic-http-client LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
find_package(Boost REQUIRED)
find_package(docopt REQUIRED)
find_package(rstream REQUIRED)
add_executable(${PROJECT_NAME} main.cpp)
target_link_libraries(${PROJECT_NAME} docopt_s Boost::boost rstream::rstream)
install(TARGETS ${PROJECT_NAME} DESTINATION ${CMAKE_INSTALL_BINDIR})
