cmake_minimum_required(VERSION 3.28)
project(rstream-basic-http-server LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
find_package(Boost REQUIRED)
find_package(rstream REQUIRED)
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
  add_compile_definitions(DEBUG_BUILD)
endif()
add_executable(${PROJECT_NAME} main.cpp)
target_link_libraries(${PROJECT_NAME} PUBLIC Boost::boost rstream::rstream)
install(TARGETS ${PROJECT_NAME} DESTINATION ${CMAKE_INSTALL_BINDIR})
